get all medical request by parent